VGG-16 model structure and training

--- a/data/training_data.ipynb
+++ b/data/training_data.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "eb11f007",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sylvi\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import kagglehub\n",
     "from kagglehub import KaggleDatasetAdapter\n",
@@ -15,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9c66af5f",
    "metadata": {},
    "outputs": [
@@ -28,8 +37,7 @@
       "1  HAM_0000118  ISIC_0025030  bkl   histo  80.0  male        scalp\n",
       "2  HAM_0002730  ISIC_0026769  bkl   histo  80.0  male        scalp\n",
       "3  HAM_0002730  ISIC_0025661  bkl   histo  80.0  male        scalp\n",
-      "4  HAM_0001466  ISIC_0031633  bkl   histo  75.0  male          ear\n",
-      "(10015, 7)\n"
+      "4  HAM_0001466  ISIC_0031633  bkl   histo  75.0  male          ear\n"
      ]
     }
    ],
@@ -55,13 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "92aa8db2",
    "metadata": {},
    "outputs": [],
    "source": [
     "labels = np.empty(total_imgs)\n",
-    "lesions = np.empty((total_imgs,224,224))\n",
+    "lesions = np.empty((total_imgs,224,224,3))\n",
     "#benign: bkl,df,nv,vasc\n",
     "#malignant: akiec,bcc,mel\n",
     "for i in range(total_imgs):\n",
@@ -74,20 +82,19 @@
     "\n",
     "    \n",
     "    file = metadata.at[i,\"image_id\"]\n",
-    "    #add path to file images in local computer\n",
-    "    path = \".\\HAM10000_images\\\\\" + file + \".jpg\"\n",
+    "    #CHANGE HERE: add path to file images in local computer \n",
+    "    path = \"C:\\\\Users\\\\sylvi\\\\OneDrive - University of Illinois - Urbana\\\\Desktop\\\\Classes\\\\BIOE485-mathofmachinelearning\\\\HAM10000_images\\\\\" + file + \".jpg\"\n",
     "    img = Image.open(path)\n",
     "    img = img.resize((224,224))\n",
     "    #TODO: potential pre-processing here. randomly rotate img & mutate colors\n",
     "    np_img = np.asarray(img)\n",
-    "    grayscale = np.mean(np_img, axis=2)\n",
     "    #divide by 225 so all values are between 0 and 1\n",
-    "    lesions[i] = grayscale / 225    "
+    "    lesions[i] = np_img / 225    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "73e347f9",
    "metadata": {},
    "outputs": [],
