small clarity edits + removing oversampling

--- a/model_analysis.ipynb
+++ b/model_analysis.ipynb
@@ -67,17 +67,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#evaluting based on uploaded model\n",
     "pred_fair = np.array(model.predict(fair_imgs)).T[0]\n",
     "pred_dark = np.array(model.predict(dark_imgs)).T[0]\n",
     "pred_vdark = np.array(model.predict(vdark_imgs)).T[0]\n",
     "pred_ham = np.array(model.predict(ham_imgs)).T[0]\n",
     "\n",
+    "#splitting predictions into a confusion matrix: which images were correctly & incorrectly labeled as what\n",
     "def predictions(true_labs, model_labs):\n",
     "    out = np.array([[0,0],[0,0]])\n",
-    "    out[0,0] = len(true_labs[model_labs<0.5]) - sum(true_labs[model_labs<0.5])\n",
-    "    out[0,1] = sum(true_labs[model_labs<0.5])\n",
-    "    out[1,1] = sum(true_labs[model_labs>0.5])\n",
-    "    out[1,0] = len(true_labs[model_labs>0.5]) - sum(true_labs[model_labs>0.5])\n",
+    "    out[0,0] = len(true_labs[model_labs<0.5]) - sum(true_labs[model_labs<0.5]) #correctly benign\n",
+    "    out[0,1] = sum(true_labs[model_labs<0.5]) # incorrectly benign\n",
+    "    out[1,1] = sum(true_labs[model_labs>0.5]) # correctly malignant\n",
+    "    out[1,0] = len(true_labs[model_labs>0.5]) - sum(true_labs[model_labs>0.5]) # incorrectly malignant\n",
     "    return(out)\n",
     "\n",
     "res_fair = predictions(fair_labels, pred_fair)\n",
@@ -107,6 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#printing loss curves for HAM and BOSQUE groups\n",
     "plt.plot(history['loss'], label = \"training\", color = 'black')\n",
     "plt.plot(history['val_loss'], label = \"validation\", color = 'grey')\n",
     "plt.plot(history['fair_loss'], label = \"fair\", color = 'lightblue')\n",
