--- a/model_googlecolab.ipynb
+++ b/model_googlecolab.ipynb
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "28b5d007",
       "metadata": {
         "colab": {
@@ -125,13 +125,8 @@
         "metadata['binary_label'] = metadata['dx'].apply(lambda x: 0 if x in benign_labels else 1)\n",
         "metadata['image_path'] = metadata['image_id'].apply(lambda x: os.path.join(data_dir, f'{x}.jpg'))\n",
         "\n",
-        "#In this dataset, only 20% of lesions are malignant. We oversample to adjust for this.\n",
-        "ros = RandomOverSampler(random_state=42)\n",
-        "resampled_data, resampled_labels = ros.fit_resample(metadata[['image_path', 'binary_label']], metadata['binary_label'])\n",
-        "metadata_resampled = pd.DataFrame(resampled_data, columns=['image_path', 'binary_label'])\n",
-        "\n",
         "#splitting into training and validation data\n",
-        "train_metadata, val_metadata = train_test_split(metadata_resampled, test_size=0.2, stratify=metadata_resampled['binary_label'], random_state=42)\n",
+        "train_metadata, val_metadata = train_test_split(metadata, test_size=0.2, stratify=metadata['binary_label'], random_state=42)\n",
         "\n",
         "#processing images (random rotation, brightness & contrast edits) + creating tensorflow datasets\n",
         "def load_image(image_path, label, augment=False):\n",
